# RealsenseCapture

./: .gitignore
cpp_align/: capture.cpp
cpp_stream/: capture.cpp
cpp_test/: CMakeLists.txt  capture.cpp
python/: capture.py
